--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "author": "Victor Zeddys",
   "license": "MIT",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.7.3",
     "truffle": "^5.5.26"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@openzeppelin/hardhat-upgrades": "^1.20.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "chai": "^4.3.6",
+    "ethers": "^5.6.9",
     "hardhat": "^2.10.2"
   }
 }
